# options-day-trader-agent

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  cleanup_db.py  config.yaml  config.yaml.example  main.py  pyproject.toml  requirements.txt
.claude/agents/: test-automator.md
.claude/skills/odta-agent-development/: SKILL.md
adk_apps/trader/: __init__.py  agent.py
docs/: PRD.md  PROGRESS.md  TECHNICAL_IMPLEMENTATION.md
odta/: __init__.py  constants.py
odta/agents/: agent.py  eod.py  loop_controller.py  market_gate.py  news.py  pre_market.py  root_agent.py  trader.py
odta/db/: connection.py  schema.py
odta/models/: config.py  trade.py
odta/prompts/: eod.py  news.py  pre_market.py  trader.py
odta/risk/: callbacks.py
odta/tools/: charts.py  decision_logger.py  greeks.py  indicators.py  market_sentiment.py  paper_tracker.py  sql_agent.py  time_helpers.py  trade_diary.py
odta/utils/: json_helpers.py  logger.py  time_helpers.py
tests/: test_charts.py  test_config.py  test_constants.py  test_database_integration.py  test_decision_logger.py  test_greeks.py  test_indicators.py  test_json_helpers.py  test_market_sentiment.py  test_paper_tracker.py  test_risk_callbacks.py  test_sql_agent.py  test_trade_diary.py
